force-app/main/default/objects/Loan_Case__c/Loan_Case__c.object-meta.xml
<CustomObject>
    <label>Loan Case</label>
    <nameField>
        <displayFormat>LC- {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>