force-app/main/default/objects/Loan_Case__c/fields/Bank_Branch_Location__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch_Location__c</fullName>
    <label>Bank Branch Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>