force-app/main/default/objects/Loan_Case__c/fields/Banker_contact_No__c.field-meta.xml
<CustomField>
    <fullName>Banker_contact_No__c</fullName>
    <label>Banker contact No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>