force-app/main/default/objects/Loan_Case__c/fields/Banker_name__c.field-meta.xml
<CustomField>
    <fullName>Banker_name__c</fullName>
    <label>Banker name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>