force-app/main/default/objects/Loan_Case__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Loan Cases</relationshipLabel>
    <relationshipName>Loan_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>