force-app/main/default/objects/Loan_Case__c/fields/Calling_Status__c.field-meta.xml
<CustomField>
    <fullName>Calling_Status__c</fullName>
    <label>Calling Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Ringing</fullName>
            </value>
            <value>
                <fullName>Temporary disconnected</fullName>
            </value>
            <value>
                <fullName>Wrong No</fullName>
            </value>
            <value>
                <fullName>List of document send</fullName>
            </value>
            <value>
                <fullName>Document received</fullName>
            </value>
            <value>
                <fullName>Document pending from Customer Side</fullName>
            </value>
            <value>
                <fullName>Partial documents received</fullName>
            </value>
            <value>
                <fullName>deal cancel</fullName>
            </value>
            <value>
                <fullName>call you letter</fullName>
            </value>
            <value>
                <fullName>not reachable</fullName>
            </value>
            <value>
                <fullName>Self Bank Loan</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>