force-app/main/default/objects/Loan_Case__c/fields/Case_Remark__c.field-meta.xml
<CustomField>
    <fullName>Case_Remark__c</fullName>
    <label>Case Remark</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self Loan</fullName>
            </value>
            <value>
                <fullName>Initial Self funding</fullName>
            </value>
            <value>
                <fullName>Deal Cancel</fullName>
            </value>
            <value>
                <fullName>sanctioned by banking team</fullName>
            </value>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>Document Received</fullName>
            </value>
            <value>
                <fullName>Clint need time to arrang Document</fullName>
            </value>
            <value>
                <fullName>Clint out of station</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>