force-app/main/default/objects/Loan_Case__c/fields/Case_Remarks_If_Others__c.field-meta.xml
<CustomField>
    <fullName>Case_Remarks_If_Others__c</fullName>
    <label>Case Remarks (If Others)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>