force-app/main/default/objects/Loan_Case__c/fields/Copy_of_residence_address_proof_Passpo__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_residence_address_proof_Passpo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy of residence address proof ( Passpo</label>
    <type>Checkbox</type>
</CustomField>