force-app/main/default/objects/Loan_Case__c/fields/current_company_offer_and_appointment_le__c.field-meta.xml
<CustomField>
    <fullName>current_company_offer_and_appointment_le__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>current company offer and appointment letter</inlineHelpText>
    <label>current company offer and appointment le</label>
    <type>Checkbox</type>
</CustomField>