force-app/main/default/objects/Loan_Case__c/fields/Current_loan_account_statement__c.field-meta.xml
<CustomField>
    <fullName>Current_loan_account_statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current loan account statement</label>
    <type>Checkbox</type>
</CustomField>