force-app/main/default/objects/Loan_Case__c/fields/current_residence_Rented_then_rent_agree__c.field-meta.xml
<CustomField>
    <fullName>current_residence_Rented_then_rent_agree__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If current residence Rented then rent agreement</inlineHelpText>
    <label>current residence Rented then rent agree</label>
    <type>Checkbox</type>
</CustomField>