force-app/main/default/objects/Loan_Case__c/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <label>Customer Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Self Emp</fullName>
            </value>
            <value>
                <fullName>Proffessional</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>