force-app/main/default/objects/Loan_Case__c/fields/Customer_Remark_on_Calling_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Remark_on_Calling_Status__c</fullName>
    <label>Customer Remark on Calling Status</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>