force-app/main/default/objects/Loan_Case__c/fields/Demand_Amount__c.field-meta.xml
<CustomField>
    <fullName>Demand_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Demand Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>