force-app/main/default/objects/Loan_Case__c/fields/Disbursment_amount_received__c.field-meta.xml
<CustomField>
    <fullName>Disbursment_amount_received__c</fullName>
    <label>Disbursment amount received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>