force-app/main/default/objects/Loan_Case__c/fields/Disbursment_Balance_Aamount__c.field-meta.xml
<CustomField>
    <fullName>Disbursment_Balance_Aamount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Disbursment Balance Aamount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>