force-app/main/default/objects/Loan_Case__c/fields/Disbursment_Docket_Status__c.field-meta.xml
<CustomField>
    <fullName>Disbursment_Docket_Status__c</fullName>
    <label>Disbursment Docket Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Docket Sign</fullName>
            </value>
            <value>
                <fullName>Docket not Sign</fullName>
            </value>
            <value>
                <fullName>Docket submited to bank</fullName>
            </value>
            <value>
                <fullName>Docket not submited to bank</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>