force-app/main/default/objects/Loan_Case__c/fields/Disbursment_payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Disbursment_payment_Mode__c</fullName>
    <label>Disbursment payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>RTGS</fullName>
            </value>
            <value>
                <fullName>NEFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>