force-app/main/default/objects/Loan_Case__c/fields/Disbursment_Query__c.field-meta.xml
<CustomField>
    <fullName>Disbursment_Query__c</fullName>
    <label>Disbursment Query</label>
    <type>Date</type>
</CustomField>