force-app/main/default/objects/Loan_Case__c/fields/Disbursment_status__c.field-meta.xml
<CustomField>
    <fullName>Disbursment_status__c</fullName>
    <label>Disbursment status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>