force-app/main/default/objects/Loan_Case__c/fields/GST_Funding_or_Not__c.field-meta.xml
<CustomField>
    <fullName>GST_Funding_or_Not__c</fullName>
    <label>GST Funding or Not</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>