force-app/main/default/objects/Loan_Case__c/fields/ID_PROOF_Pan_Card_Aadhar_card__c.field-meta.xml
<CustomField>
    <fullName>ID_PROOF_Pan_Card_Aadhar_card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ID PROOF ( Pan Card , Aadhar card )</label>
    <type>Checkbox</type>
</CustomField>