force-app/main/default/objects/Loan_Case__c/fields/If_company_changes_in_last_6_month__c.field-meta.xml
<CustomField>
    <fullName>If_company_changes_in_last_6_month__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If company changes in last 6 month then Existing company relieving letter</inlineHelpText>
    <label>If company changes in last 6 month</label>
    <type>Checkbox</type>
</CustomField>