force-app/main/default/objects/Loan_Case__c/fields/Is_Sanctioned_Letter_Uploded__c.field-meta.xml
<CustomField>
    <fullName>Is_Sanctioned_Letter_Uploded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sanctioned Letter Uploded</label>
    <type>Checkbox</type>
</CustomField>