force-app/main/default/objects/Loan_Case__c/fields/Last_12_months_saving_and_salary_bank_st__c.field-meta.xml
<CustomField>
    <fullName>Last_12_months_saving_and_salary_bank_st__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last 12 months saving and salary bank st</label>
    <type>Checkbox</type>
</CustomField>