force-app/main/default/objects/Loan_Case__c/fields/Last_2_yrs_form_no_16__c.field-meta.xml
<CustomField>
    <fullName>Last_2_yrs_form_no_16__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last 2 yrs. form no.16</label>
    <type>Checkbox</type>
</CustomField>