force-app/main/default/objects/Loan_Case__c/fields/Latest_6_months_salary_slip__c.field-meta.xml
<CustomField>
    <fullName>Latest_6_months_salary_slip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Latest 6 months salary slip</label>
    <type>Checkbox</type>
</CustomField>