force-app/main/default/objects/Loan_Case__c/fields/Latest_Increment_Letter__c.field-meta.xml
<CustomField>
    <fullName>Latest_Increment_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Latest Increment Letter and any annual bones letter .( If any )</inlineHelpText>
    <label>Latest Increment Letter</label>
    <type>Checkbox</type>
</CustomField>