force-app/main/default/objects/Loan_Case__c/fields/Legal_Remark_Clear_Unclear__c.field-meta.xml
<CustomField>
    <fullName>Legal_Remark_Clear_Unclear__c</fullName>
    <label>Legal Remark / Clear Unclear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>