force-app/main/default/objects/Loan_Case__c/fields/Legal_Status_Any_query__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status_Any_query__c</fullName>
    <label>Legal Status/ Any query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>