force-app/main/default/objects/Loan_Case__c/fields/Monthly_Income_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Income_Annual_Income__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Income / Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>