force-app/main/default/objects/Loan_Case__c/fields/NOC__c.field-meta.xml
<CustomField>
    <fullName>NOC__c</fullName>
    <label>NOC</label>
    <type>Date</type>
</CustomField>