force-app/main/default/objects/Loan_Case__c/fields/Orignal_Agreement_Received__c.field-meta.xml
<CustomField>
    <fullName>Orignal_Agreement_Received__c</fullName>
    <label>Orignal Agreement Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>