force-app/main/default/objects/Loan_Case__c/fields/Orignal_Document_submit_date_to_bank__c.field-meta.xml
<CustomField>
    <fullName>Orignal_Document_submit_date_to_bank__c</fullName>
    <label>Orignal Document submit date to bank</label>
    <type>Date</type>
</CustomField>