force-app/main/default/objects/Loan_Case__c/fields/Parelall_funding_Required_or_not__c.field-meta.xml
<CustomField>
    <fullName>Parelall_funding_Required_or_not__c</fullName>
    <label>Parelall funding Required or not</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>