force-app/main/default/objects/Loan_Case__c/fields/Project_APF_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_APF_Status__c</fullName>
    <label>Project APF Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>