force-app/main/default/objects/Loan_Case__c/fields/Required_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Required_Loan_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Required Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>