force-app/main/default/objects/Loan_Case__c/fields/ROC_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>ROC_Received_Date__c</fullName>
    <label>ROC Received Date</label>
    <type>Date</type>
</CustomField>