force-app/main/default/objects/Loan_Case__c/fields/ROC_Status__c.field-meta.xml
<CustomField>
    <fullName>ROC_Status__c</fullName>
    <label>ROC Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applied Date</fullName>
            </value>
            <value>
                <fullName>Received Date</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>