force-app/main/default/objects/Loan_Case__c/fields/Sanctioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Sanctioned_Date__c</fullName>
    <label>Sanctioned Date</label>
    <type>Date</type>
</CustomField>