force-app/main/default/objects/Loan_Case__c/fields/Special_Sanction_condition__c.field-meta.xml
<CustomField>
    <fullName>Special_Sanction_condition__c</fullName>
    <label>Special Sanction condition</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>