force-app/main/default/objects/Loan_Case__c/fields/Stage_of_Demand__c.field-meta.xml
<CustomField>
    <fullName>Stage_of_Demand__c</fullName>
    <label>Stage of Demand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>