force-app/main/default/objects/Loan_Case__c/fields/Technical_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Technical_Market_Value__c</fullName>
    <label>Technical / Market Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>