force-app/main/default/objects/Loan_Case__c/fields/Technical_Remark__c.field-meta.xml
<CustomField>
    <fullName>Technical_Remark__c</fullName>
    <label>Technical Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>