force-app/main/default/objects/Loan_Case__c/fields/X1st_Disbursment_date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Disbursment_date__c</fullName>
    <label>1st Disbursment date</label>
    <type>Date</type>
</CustomField>