force-app/main/default/objects/Loan_Case__c/fields/X2_photograph_of_each_Applicant_s__c.field-meta.xml
<CustomField>
    <fullName>X2_photograph_of_each_Applicant_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2 photograph of each Applicant’s.</label>
    <type>Checkbox</type>
</CustomField>